# mine_diamonds

./: .gitignore  DEMO.md  LIGHTNING_TALK.md  README.md  pyproject.toml
assets/texture_pack/: README.md
docs/: FIGURES_FOR_RESULTS.md  PAPER_DRAFT_REVISED.md  PAPER_RESULTS_ASSETS.md  PAPER_WORKING_DRAFT.md  PRESENTATION_DATA.md
docs/figs/: README.txt
docs/figs/mc_real_forest_cursor_ps/: episodes.csv
docs/figs/mc_real_superflat_long_y0/: episodes.csv  results_summary.md
docs/figs/mc_real_superflat_retry_bidir/: episodes.csv  results_summary.md
docs/figs/mc_real_v14_no_kill_reset/: episodes.csv  results_summary.md
docs/metrics/: runs.csv  summary.md
scripts/: aggregate_metrics.py  build_paper_figs.py  build_results_narrative_figs.py  build_storyboard.py  calibrate_inventory.py  craft_after_rl.py  demo_chop_one_log.py  demo_treechop_macro.py  demo_treechop_vision.py  eval_crafter.py  scripted_tree_chop.py  smoke_crafter.py  smoke_env.py  smoke_minecraft_real.py  train_ppo_baseline.py  train_ppo_crafter.py  train_ppo_minecraft_real.py  window_fit_check.py
src/mine_diamonds/: __init__.py  capture.py  failsafe.py
src/mine_diamonds/envs/: __init__.py  crafter_env.py  minecraft_bridge.py  minecraft_real.py  simple_gather.py
src/mine_diamonds/input/: __init__.py  clipboard.py  game_input.py  win_sendinput.py
src/mine_diamonds/scripted/: __init__.py  craft_table.py  inventory_layout.py
src/mine_diamonds/vision/: __init__.py  pack_colors.py
