[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mine-diamonds"
version = "0.1.0"
description = "RL scaffolding toward Minecraft resource gathering"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29.0",
  "numpy>=1.24",
  "stable-baselines3>=2.0.0",
]

[project.optional-dependencies]
minecraft-demo = [
  "pyautogui>=0.9.54",
  "keyboard>=0.13.5",
  "mss>=9.0.0",
  "opencv-python>=4.8.0",
  "tensorboard>=2.15",
  "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
